# fedit

./: .gitignore  README.md  package-lock.json  package.json
.githooks/: commit-msg
src/: index.html  main.js  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs  main.rs
