[package]
name = "fedit"
version = "0.1.0"
description = "A minimal text editor built on Tauri 2"
authors = ["you"]
edition = "2024"

[lib]
name = "fedit_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-dialog = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

